--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Assets/style.css">
-    <script defer src="/Script/script.js"></script>
+    <link rel="stylesheet" href="/assets/style.css">
+    <script defer src="/script/script.js"></script>
     <title>Walnut take home test</title>
 </head>
 
@@ -17,9 +17,9 @@
         <option class="option" value="2">2</option>
         <option class="option" value="3">3</option>
         <option class="option" value="4">4</option>
-        <option class="option" value="5">5</option>
+        <option class="option" value="5" selected>5</option>
     </select>
-    <button id="startBtn">start</button>
+    <button id="statusButton"></button>
 </div>
     <div class="grid">
 
