fix fill grid function to fill it properly

--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
 
 <body>
     <div class="header">
-    <select name="mode" id="gridNumber">
-        <option class="option" value="1">1</option>
-        <option class="option" value="2">2</option>
-        <option class="option" value="3">3</option>
-        <option class="option" value="4">4</option>
-        <option class="option" value="5" selected>5</option>
-    </select>
-    <button id="statusButton"></button>
-</div>
-    <div class="grid">
+        <div class="select-wrapper">
+            <label>Pick mode</label>
+            <select name="mode" id="gridNumber">
+                <option class="option" value="1">1</option>
+                <option class="option" value="2">2</option>
+                <option class="option" value="3">3</option>
+                <option class="option" value="4">4</option>
+                <option class="option" value="5" selected>5</option>
+                <option class="option" value="6">6</option>
 
+            </select>
+        </div>
+        <button id="statusButton"></button>
+    </div>
+    <div class="grid">
     </div>
 </body>
 
